apps/nextcloud/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: manafishrov-nextcloud
  labels:
    gateway-access: public
    pod-security.kubernetes.io/enforce: privileged
