apps/nextcloud/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-internal
  namespace: manafishrov-nextcloud
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app: nextcloud
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: manafishrov-nextcloud
spec:
  selector:
    app: nextcloud
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: notify-push
  namespace: manafishrov-nextcloud
spec:
  selector:
    app: nextcloud
  ports:
    - name: push
      port: 7867
      targetPort: push
---
apiVersion: v1
kind: Service
metadata:
  name: valkey
  namespace: manafishrov-nextcloud
spec:
  selector:
    app: valkey
  ports:
    - name: redis
      port: 6379
      targetPort: redis
---
apiVersion: v1
kind: Service
metadata:
  name: imaginary
  namespace: manafishrov-nextcloud
spec:
  selector:
    app: imaginary
  ports:
    - name: http
      port: 9000
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: collabora
  namespace: manafishrov-nextcloud
spec:
  selector:
    app: collabora
  ports:
    - name: http
      port: 9980
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-talk-signaling
  namespace: manafishrov-nextcloud
spec:
  selector:
    app: nextcloud-talk
  ports:
    - name: signaling
      port: 8081
      targetPort: signaling
---
apiVersion: v1
kind: Service
metadata:
  name: whiteboard
  namespace: manafishrov-nextcloud
spec:
  selector:
    app: whiteboard
  ports:
    - name: http
      port: 3002
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-talk-recording
  namespace: manafishrov-nextcloud
spec:
  selector:
    app: nextcloud-talk-recording
  ports:
    - name: http
      port: 1234
      targetPort: http
